	PR target/53228 	* config/i386/i386.h (X86_ARCH_CMOV): Rename from X86_ARCH_CMOVE. 	(TARGET_CMOV): Rename from TARGET_CMOVE. 	(TARGET_CMOVE): New define. 	* config/i386/i386.c (ix86_option_override_internal): Use TARGET_CMOV. 	Do not set TARGET_CMOVE here.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@187168 138bc75d-0d04-0410-961f-82ee72b054a4